# 9_tasks-BLD_backend

./: QUERIES.md  README.md  conftest.py  pyproject.toml
albums/: admin.py  filters.py  models.py  serializers.py  tasks.py  urls.py  views.py
albums/migrations/: 0001_initial.py  0002_song.py
artists/: admin.py  models.py  serializers.py  urls.py  views.py
artists/migrations/: 0001_initial.py  0002_artist_user.py  0003_alter_artist_user.py  0004_alter_artist_user.py  0005_alter_artist_user.py
artists/tests/: test_endpoints.py
authentication/: serializers.py  urls.py  views.py
musicplatform/: celery.py  settings.py  urls.py
templates/: base.html
templates/albums/: create.html  retrieve.html
templates/artists/: create.html  retrieve.html
templates/auth/: login.html  logout.html  register.html
users/: admin.py  forms.py  models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_user_email.py  0003_alter_user_email.py  0004_alter_user_email.py  0005_alter_user_email.py
users/tests/: test_endpoints.py
