[tool.poetry]
name = "lwa7daaay"
version = "0.1.0"
description = ""
authors = ["yaaa3ser <yasserissa1411@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.3"
django-extensions = "^3.2.1"
ipython = "^8.6.0"
django-model-utils = "^4.3.1"
python-decouple = "^3.6"
djangorestframework = "^3.14.0"
django-rest-knox = "^4.2.0"
pytest = "^7.2.0"
pytest-django = "^4.5.2"
django-filter = "^22.1"
celery = {extras = ["redis"], version = "^5.2.7"}
gevent = "^22.10.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
